--- a/diamm/templates/website/source/bibliography.jinja2
+++ b/diamm/templates/website/source/bibliography.jinja2
@@ -1,4 +1,4 @@
-<div class="column source-bibliography content">
+<div class="column is-half source-bibliography content">
     <p class="is-marginless">
         <strong>&Dagger; <em>denotes primary source study</em></strong>
     </p>
