--- a/diamm/templates/website/source/inventory-composition-order.jinja2
+++ b/diamm/templates/website/source/inventory-composition-order.jinja2
@@ -9,6 +9,7 @@
         </tr>
         </thead>
         <tbody>
+        {% set show_imagelinks = content.manifest_url is defined %}
         {% for entry in content.inventory|sort(attribute="composition") %}
         <tr class="alpha-order">
             <td class="item-details">
@@ -18,7 +19,7 @@
                 {{ composers(entry) }}
             </td>
             <td>
-                {{ foliation(entry) }}
+                {{ foliation(entry, show_imagelinks) }}
             </td>
         </tr>
         {% endfor %}
