--- a/diamm/static/stylesheets/_source.scss
+++ b/diamm/static/stylesheets/_source.scss
@@ -296,8 +296,8 @@ tr.selected {
   }
 }
 
-.source-sets {
-  .source-set-sources {
+.source-set {
+  .set-sources {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
