--- a/diamm/templates/website/source/contributions.jinja2
+++ b/diamm/templates/website/source/contributions.jinja2
@@ -1,13 +1,11 @@
-{% if not content.contributions %}
-    <div class="columns">
+<div class="columns">
+    {% if not content.contributions %}
         <div class="column">
             <div class="notification">
                 No contributors to show for this record.
             </div>
         </div>
-    </div>
-{% else %}
-    <div class="columns">
+    {% else %}
         <div class="column is-8">
             <p class="contributions-intro">Contributions to this record are recorded here. If you wish to contribute
                 information or a correction to this record, use the "Contribute a Change" link. This
@@ -18,6 +16,11 @@
                     <div class="content">
                         <h3 class="title is-5">
                             <span>{{ entry.contributor if entry.contributor else entry.credit }}</span>
+                            {% if request.user.is_staff %}
+                                <sup>
+                                    <a href="/admin/diamm_site/problemreport/{{ entry.pk }}">Edit</a>
+                                </sup>
+                            {% endif %}
                         </h3>
                         <h4 class="subtitle is-6">{{ entry.updated }}</h4>
                         <p>{{ entry.summary }}</p>
@@ -26,5 +29,5 @@
             </div>
             {% endfor %}
         </div>
-    </div>
-{% endif %}
+    {% endif %}
+</div>
