--- a/diamm/templates/website/source/description.jinja2
+++ b/diamm/templates/website/source/description.jinja2
@@ -250,7 +250,7 @@
     </div>
     <div class="column">
         {% if content.cover_image_info and content.has_images and content.public_images %}
-            <figure class="card">
+            <figure class="card is-center" style="width: 400px; margin: auto;">
                 <div class="card-image">
                     <figure class="image">
                         <img src="{{ content.cover_image_info.url }}"/>
