--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -50,7 +50,6 @@
             </div>
         </div>
     {% endif %}
-    {# include "website/blocks/beta_notice.jinja2" #}
     {% include "website/blocks/header.jinja2" %}
 
     <div class="full-width">
@@ -58,10 +57,10 @@
         {% endblock %}
     </div>
 
-    <div class="container is-fluid page-body">
+    <main class="container is-fluid is-fullheight page-body">
         {% block body %}
         {% endblock %}
-    </div>
+    </main>
 
     <footer class="footer">
         <div class="container columns">
